Práctica clase - Movies Manager Web- Cambio del encoding para acentos.

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
 <html>
     <head>
         <title>Movies Manager</title>
-        <meta charset="UTF-8">
+        <meta charset="ISO-8859-1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="/MoviesManager/css/movies.css">   
     </head>
@@ -31,7 +31,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                 <div class="field">
                     <label for="id">Filtrar por: </label>
                     <select type="text" name="m_formato" id="formato"><br/>
-                        <option value="Peliculas">PelÃ­culas</option>
+                        <option value="Peliculas">Películas</option>
                         <option value="Series">Series</option>
                         <option value="Documentales">Documentales</option>
                     </select>
