Práctica clase - Movies Manager Web- Cambio del encoding para acentos.

--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                 <div class="field">
                     <label for="id">Filtrar por: </label>
                     <select type="text" name="m_formato" id="formato"><br/>
-                        <option value="Peliculas">Películas</option>
+                        <option value="Películas">Películas</option>
                         <option value="Series">Series</option>
                         <option value="Documentales">Documentales</option>
                     </select>
