--- a/web/index.html
+++ b/web/index.html
@@ -11,35 +11,49 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <link rel="stylesheet" type="text/css" href="/MoviesManager/css/movies.css">   
     </head>
     <body>
-        <c:if test="${mm.status !=null}">
-                <div class="${ (mm.errors)?'error':'info'}" disabled></div>
-            </c:if>
-        <section class="content">
-            <h1>Movies Manager</h1>
-            <a href="insertartitulo.jsp">
-                <div class="field">
-                    <input type="submit" value="Insertar">
-                </div>
-            </a><br>
-            <form action="MoviesList" method="POST">
-                <div class="field">
-                    <input type="submit" value="Buscar todos" name = "accion">
-                </div>
-            </form>
-            <br>
-            <form action="MoviesList" method="POST">
-                <div class="field">
-                    <label for="id">Filtrar por: </label>
-                    <select type="text" name="m_formato" id="formato"><br/>
-                        <option value="Películas">Películas</option>
-                        <option value="Series">Series</option>
-                        <option value="Documentales">Documentales</option>
-                    </select>
-                    <input type="submit" value="Buscar vistas" name = "accion">
-                    <input type="submit" value="Buscar pendientes" name = "accion">
-                </div> 
-            </form>
-            <br>
-        </section>
-    </body>
+    <c:if test="${mm.status !=null}">
+        <div class="${
+            (mm.errors)?'error':'info'
+        }" disabled></div>
+    </c:if>
+    <section class="content">
+        <h1>Movies Manager</h1>
+        <a href="insertartitulo.jsp">
+            <div class="field">
+                <input type="submit" value="Insertar">
+            </div>
+        </a><br>
+        <form action="MoviesList" method="POST">
+            <div class="field">
+                <input type="submit" value="Buscar todos" name = "accion">
+            </div>
+        </form>
+        <br>
+        <form action="MoviesList" method="POST">
+            <div class="field">
+                <label for="id">Buscar por: </label>
+                <select type="text" name="m_filtros" id="filtros"><br/>
+                    <option value="id">ID</option>
+                    <option value="titulo">Título</option>
+                    <option value="genero">Género</option>
+                </select>
+                <input type="text" id="filtro" name="m_filtro" required>
+                <input type="submit" value="Buscar" name = "accion">
+            </div> 
+        </form>
+        <form action="MoviesList" method="POST">
+            <div class="field">
+                <label for="id">Filtrar por: </label>
+                <select type="text" name="m_formato" id="formato"><br/>
+                    <option value="Películas">Películas</option>
+                    <option value="Series">Series</option>
+                    <option value="Documentales">Documentales</option>
+                </select>
+                <input type="submit" value="Buscar vistas" name = "accion">
+                <input type="submit" value="Buscar pendientes" name = "accion">
+            </div> 
+        </form>
+        <br>
+    </section>
+</body>
 </html>
