Práctica clase - Movies Manager Web- Se incluye Login

--- a/web/menu.html
+++ b/web/menu.html
@@ -52,6 +52,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                 <input type="submit" value="Buscar vistas" name = "accion">
                 <input type="submit" value="Buscar pendientes" name = "accion">
             </div> 
+        </form><br>
+        <form action="Login" method="POST">
+                <input type="submit" value="Cerrar" name = "accion">
+            </div> 
         </form>
         <br>
     </section>
